src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Emp_Desc__c</fullName>
        <label>Emp Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employ_test_field1__c</fullName>
        <label>Employ test field1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employ_test_field2__c</fullName>
        <label>Employ test field2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Info__c</fullName>
        <label>Employee Info</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>